# ai-dev-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ai-dev-workflow.toml  repo_structure.md
.github/: release-template.md
.github/workflows/: ci.yml  release.yml
config/: ai-dev-workflow.example.toml
crates/adr/: Cargo.toml
crates/adr/src/: lib.rs
crates/ai_tools/: Cargo.toml
crates/ai_tools/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: adr.rs  config.rs  mod.rs  note.rs  projects.rs  search.rs  session.rs
crates/cli/tests/: session_integration_tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: config_tests.rs
crates/obsidian/: Cargo.toml
crates/obsidian/src/: lib.rs  search.rs
crates/obsidian/tests/: obsidian_tests.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/templates/: Cargo.toml
crates/templates/src/: lib.rs
docs/: Architecture.md  CLI_Spec.md  Implementation_Roadmap.md  PRD.md  Smoke_Test.md  Workflow.md  obsidian_memory_layer_v_1_spec.md
project_bootstrap/: README.md
project_bootstrap/codex/: CODEX_START.md
project_bootstrap/config/: ai-dev-workflow.example.toml
project_bootstrap/docs/: CLI_Spec.md  Module_Specs.md  Multi_Project_Model.md  Workflow.md
project_bootstrap/repo_structure/: Cargo_workspace_stub.txt
templates/: AIW_ADR.md  AIW_Dev_Log.md  Dev_Log_Template.md
