[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/config",
  "crates/session",
  "crates/ai_tools",
  "crates/obsidian",
  "crates/adr",
  "crates/templates",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde_json = "1.0"
pathdiff = "0.2"
