[package]
name = "aiw"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aiw-config = { path = "../config" }
aiw-session = { path = "../session" }
aiw-adr = { path = "../adr" }
aiw-obsidian = { path = "../obsidian" }
aiw-ai-tools = { path = "../ai_tools" }
